# rust-pathfinder

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
app/: Cargo.toml  build.rs  frag.spv
app/assets/: 072.tsx  dungeon_floor.csv  dungeon_layer.csv  map.tmx  test-map.csv
app/shaders_examples/: hi.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shadertest.frag
app/src/: algebra.rs  animation.rs  backup.rs  bind_group.rs  bindable.rs  boxes.rs  buffer.rs  camera.rs  framework.rs  main.rs  note.md  pipeline.rs  post_process_renderer.rs  postprocess.rs  renderer_chain.rs  resource.rs  run.rs  sampler.rs  shader.frag  shader.frag.spv  shader.vert  sprite.rs  sprite_atlas.rs  state.rs  text_renderer.rs  texture.rs  tile.rs  tile_renderer.rs  tiles.rs  utils.rs  vertex.rs  world.rs
app/src/post_process/: vignette.spv
app/src/postprocess/: vignette.wgsl
app/src/shaders/: display_tileset.wgsl  fragment.wgsl  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shadertest.frag.spv  sprite.wgsl  tile.wgsl  vertex.wgsl
app/src/sprite/: sprite.wgsl  sprite_atlas.rs
app/src/tile/: tile.wgsl
builder/: Cargo.toml
builder/src/: lib.rs
derive_vertex/: Cargo.toml
derive_vertex/src/: lib.rs
derive_vertex/tests/: 01-parse.rs  02-create-descriptor.rs  progress.rs
dice/: Cargo.toml
dice/src/: lib.rs
rules/: Cargo.toml
rules/benches/: bench.rs
rules/src/: activity.rs  character.rs  fact.rs  item.rs  lib.rs  main.rs  rules.rs  timeline.rs  ui.rs  utils.rs  world.rs
rules/src/activity/: attack.rs  bless.rs  find_target.rs  magicmissile.rs  pass.rs
rules/src/character/: abilities.rs
rules/src/item/: weapon.rs
rules/src/rules/: deadly.rs  finesse.rs  passthrough.rs  propulsive.rs  str_mod_damage.rs  striking.rs
src/: abilities.rs  activity.rs  character.rs  check.rs  dice.rs  encounter_state.rs  equipment.rs  item.rs  lib.rs  main.rs  paladin.rs  roll.rs  rules.rs  slots.rs  status.rs  timeline.rs  ui.rs  utils.rs  world.rs
src/activity/: attack.rs  bless.rs  find_target.rs  pass.rs  spell.rs  weapon.rs
src/character/: abilities.rs  bonus.md  bonus.rs
src/item/: armor.rs  itemtrait.rs  traits.rs  weapon.rs  weapons.rs
src/item/traits/: implementation.rs
src/rules/: deadly.rs  finesse.rs  passthrough.rs  propulsive.rs  str_mod_damage.rs  striking.rs
src/snippet/: snippet1.rs  snippet2.rs
wgputils/: Cargo.toml
wgputils/derive_vertex/src/: lib.rs
wgputils/derive_vertex/tests/: 01-parse.rs  08-unrecognized-attribute.stderr
wgputils/src/: bindable.rs  buffer.rs  lib.rs  pipeline.rs  sampler.rs  texture.rs  utils.rs
wgputils_sample/: Cargo.toml
wgputils_sample/src/: lib.rs  main.rs
