[package]
name = "wgpu"
version = "0.1.0"
authors = ["baptistemanson <baptiste.manson@inovia.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17"
log = "0.4"
png = "0.16"
winit = { version = "0.23.0", features = ["web-sys"] }
rand = { version = "0.7.2", features = ["wasm-bindgen"] }
bytemuck = { version = "1.4", features = ["derive"] }
noise = "0.6"
ddsfile = "0.4"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git" }
pollster = "0.2"
async-executor = "1.4.0"


[dependencies.wgt]
package = "wgpu-types"
git = "https://github.com/gfx-rs/wgpu"
rev = "4ebe1f50b057046e4d4f015eb006330d62f5fe91"
