[package]
name = "app"
version = "0.1.0"
authors = ["baptistemanson <baptiste.manson@inovia.fr>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 'z'


[dependencies]
cgmath = "0.17"
log = "0.4"
png = "0.16"
winit = { version = "0.23.0", features = ["web-sys"] }
wgpu = { path = "../../wgpu-rs" }
rules = { path = "../rules" }
wgputils = { path = "../wgputils" }
pollster = "0.2"
async-executor = "1.4.0"
wgpu_glyph = { path = "../../wgpu_glyph"}
