[package]
name = "derive_vertex"
version = "0.0.1"
edition = "2018"
autotests = false
publish = false


[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
syn = { version = "1", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.24"
wgpu = "0.6.2"


