[package]
name = "rules"
version = "0.1.0"
authors = ["Baptiste Manson <baptiste.manson@gmail.com>"]
edition = "2018"

[lib]
name = "rules"
path = "src/lib.rs"


[profile.release]
debug = true

[dependencies]
rand = "0.8.0"
flagset = "0.3.0"
regex = "1"
snowflake = "1.2"
dice = { path = "../dice" }





