[package]
name = "wgputils"
version = "0.1.0"
authors = ["Baptiste Manson <baptiste.manson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]


[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git" }
derive_vertex =  { path = "derive_vertex" }
image = "0.23"
